# spaced-repitition

./: .dockerignore  .env.example  .gitignore  app.json  deploy.sh  docker-entrypoint.sh  drizzle.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  svelte.config.js  tsconfig.json  vitest.config.ts
api/: .env  .env.sample  Cargo.toml  Dockerfile  readme.md
api/.sqlx/: query-66a5ae0ab7d8146701e5ea1ea931c8a91305c1a8a23362eec87044db1308a516.json  query-6928e8e992a6fa84e701ff1cc141a1204e80b6d3adea9559f0ae6a3ef5421ce3.json  query-6afaf946ab18cd9346afb6577d6bb8539cc2890ae63770169ad55e32c4ba5db1.json  query-9704e5320981ecd1b3aa741bb9e4ef71c40e94bc390a63f355b4d388919bf238.json  query-ba27c04460639081ca5f4c88d788612cc1eec3b11f35971b57077513d89158b3.json  query-d3246f5ed6ec355c55ca873ca569e78bcffcffd802c566f3dfd29fbdd40c1057.json  query-d7a0a503fb69eb85afac3910531a0ca9218448f61a501b069d80239e45fc88c6.json
api/migrations/: 20241224180822_create_users.sql  20241225214442_create_cards.sql  20241227013953_create_user_role.sql
api/scripts/: setup.sh
api/src/: auth.rs  config.rs  error.rs  graphql.rs  http.rs  lib.rs  main.rs
api/src/application/: container.rs  errors.rs  graphql.rs  http.rs
api/src/application/graphql/: dataloaders.rs  errors.rs  middleware.rs  (+4 more)
api/src/domain/: auth.rs  errors.rs  models.rs  policies.rs  repositories.rs  services.rs
api/src/graphql/: dataloaders.rs  mod.rs  mutation.rs  mutations.rs  queries.rs  query.rs  scalars.rs  schema.rs
api/src/http/: error.rs  extractor.rs  mod.rs  types.rs  users.rs
(+206 files in other folders)
