[package]
name = "spaced-repetition-api"
version = "0.1.0"
edition = "2021"

[dependencies]

# Web Framework
axum = "0.7.9"
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tracing and Logging
tracing = "0.1"
tracing-subscriber = "0.3"
env_logger = "0.11.6"
log = "0.4.22"

# Database (SQLx with Postgres support)
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "uuid", "time"] }

# Authentication and Security
argon2 = "0.5.3"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"

# Utility Crates
anyhow = "1.0.95"
dotenvy = "0.15.7"
clap = { version = "4.5.23", features = ["derive", "env"] }
time = "0.3.37"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
async-trait = "0.1.83"
rand = "0.8.5"
thiserror = "2.0.9"
async-graphql = { version = "7.0.13", features = ["time", "dataloader"] }
async-graphql-axum = "7.0.13"